SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_18.lang
var x = 18 var y = 10;